tests/ui/issues/issue-69455.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-69455.rs:29:20
   |
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |               --   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |               |
   |               required by a bound introduced by this call
   |
   = note: cannot satisfy `_: std::fmt::Display`
note: required by a bound in `core::fmt::rt::Argument::<'_>::new_display`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL

error[E0283]: type annotations needed
  --> $DIR/issue-69455.rs:29:41
   |
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                          ----           ^^^ cannot infer type of the type parameter `S` declared on the method `sum`
   |                          |
   |                          required by a bound introduced by this call
   |
note: multiple `impl`s satisfying `u64: Test<_>` found
  --> $DIR/issue-69455.rs:11:1
   |
LL | impl Test<u32> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Test<u64> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
help: consider specifying the generic argument
   |
LL |     println!("{}", 23u64.test(xs.iter().sum::<S>()));
   |                                            +++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
